# ros2_testing

./: README.md  build_all.sh  build_py_symlink.sh
install/: local_setup.sh  setup.sh
install/my_first_cpp_pkg/lib/my_first_cpp_pkg/: my_first_node  number_publisher  publisher_and_subscriber_test  publisher_test  publisher_test_2  subscriber_test  test_service_client  test_service_client_no_oop  test_service_server
install/my_first_cpp_pkg/share/ament_index/resource_index/package_run_dependencies/: my_first_cpp_pkg
install/my_first_cpp_pkg/share/ament_index/resource_index/parent_prefix_path/: my_first_cpp_pkg
install/my_first_cpp_pkg/share/my_first_cpp_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_first_cpp_pkg/share/my_first_cpp_pkg/cmake/: my_first_cpp_pkgConfig-version.cmake  my_first_cpp_pkgConfig.cmake
install/my_first_cpp_pkg/share/my_first_cpp_pkg/environment/: ament_prefix_path.dsv  path.dsv
install/my_first_package/lib/my_first_package/: publisher_test  subscriber_test  test_service_client  test_service_client_no_oop  test_service_server
install/my_first_package/share/my_first_package/: package.sh  package.xml
log/: latest_build  latest_list
src/my_first_cpp_pkg/: CMakeLists.txt
src/my_first_cpp_pkg/src/: my_first_node.cpp
src/my_first_cpp_pkg/src/tests_interfaces/: hardware_status_publisher.cpp
src/my_first_cpp_pkg/src/tests_publisher_subscriber/: publisher_and_subscriber_test.cpp  publisher_test2.cpp
src/my_first_cpp_pkg/src/tests_services/: test_service_client.cpp  test_service_client_no_oop.cpp  test_service_server.cpp
src/my_first_cpp_pkg/src/tests_services_and_topics/: number_counter.cpp  number_publisher.cpp
src/my_first_cpp_pkg/src/tests_topics/: publisher_test.cpp  subscriber_test.cpp
src/my_first_package/: package.xml  setup.py
src/my_first_package/my_first_package/tests_interfaces/: hardware_status_publisher.py
src/my_first_package/my_first_package/tests_publisher_subscriber/: publisher_test.py
src/test_interfaces/: CMakeLists.txt  package.xml
src/test_interfaces/srv/: ComputeRectangleArea.srv
